# taskcli

./: .gitignore  README.md  pyproject.toml
src/: defaults.py  task.py  taskcli.py  utils.py
taskcli/: __main__.py  defaults.py  main.py  task.py  utils.py
tests/: test_task.py  test_utils.py
