[tool.poetry]
name = "taskcli"
version = "0.1.0"
description = "A simple cli task tracker"
authors = ["Cristian Bastidas <crixodia@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
taskcli = "taskcli.main:app"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
